--- a/public/css/app.css
+++ b/public/css/app.css
@@ -730,7 +730,7 @@ footer .container li {
 	margin-right:0.2em;
 }
 .footer-logo {
-	width:150px;
+	/*width:150px;*/
 	padding-top:3px;
 	padding-left:0px;
 	padding-bottom:30px;
