디테일 페이지 포인트 컬러 변경

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -2877,8 +2877,8 @@ fieldset[disabled] .btn-primary.active {
 }
 .btn-success {
   color: #ffffff;
-  background-color: #EF4D5D;
-  border-color: #EF4D5D;
+  background-color: #43c9f0;
+  border-color: #43c9f0;
 }
 .btn-success:hover,
 .btn-success:focus,
