--- a/public/css/login/login.css
+++ b/public/css/login/login.css
@@ -105,8 +105,8 @@
   padding: 8px 44px;
   border-radius: 4px;
   font-size: 15px;
-  background-color: #EF4D5D;
-  border: 1px solid #EF4D5D;
+  background-color: #43c9f0;
+  border: 1px solid #43c9f0;
   font-weight: 500;
   color: white;
 }
