--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -227,7 +227,7 @@
 .ct-percent {
     float:right;
     font-weight:600;
-    color:#EF4D5D;
+    color:#43c9f0;
 }
 
 .project-grid-wrapper .project-description{
