css깨지는 이슈 수정(무엇을 할까 문자가 길때 깨짐)

--- a/public/css/mannayo.css
+++ b/public/css/mannayo.css
@@ -1033,6 +1033,7 @@ p{
   .mannayo_thumb_content_container{
     font-size: 12px;
     color: #808080;
+    word-break: break-all;
   }
 
   .mannayo_thumb_container{
