출석 인원수 보이기 기능 추가 css 버그 수정

--- a/public/css/mannayo.css
+++ b/public/css/mannayo.css
@@ -666,7 +666,7 @@ p{
   }
 
   #meetup_popup_city_text{
-    margin-left: auto;
+    margin-left: 20px;
     /*margin-right: 95px;*/
     margin-right: auto;
   }
