--- a/public/css/mannayo.css
+++ b/public/css/mannayo.css
@@ -1634,6 +1634,36 @@ p{
     color: #aaa;
   }
 
+  .meetup_popup_option_comment_input_wrapper{
+    width: 100%;
+  }
+
+  #meetup_popup_option_comment_input{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    border: 1px solid #e6e6e6;
+    text-align: left;
+    padding-left: 20px;
+  }
+
+  #meetup_popup_option_comment_input::-ms-input-placeholder { 
+    color: #e6e6e6;
+    text-align: left;
+  }
+  #meetup_popup_option_comment_input::-webkit-input-placeholder { 
+    color: #e6e6e6;
+    text-align: left;
+  } 
+  #meetup_popup_option_comment_input::-moz-placeholder { 
+    color: #e6e6e6;
+    text-align: left;
+  }
+
+  .meetup_popup_option_comment_input_wrapper{
+    width: 100%;
+  }
+
   @media (max-width:1060px) {
     .welcome_start_content_container{
       margin-left: 13%;
