팝업 떠있을때 뒤가 스크롤 되는 이슈 수정

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -65,6 +65,7 @@ body {
 .comment-list .comment-content {
 	font-size:14px;
 	color:#666;
+	word-break: break-all;
 }
 .comment-list .toggle-reply {
 	cursor:pointer;
