더 둘러보기, 댓글달기 버튼 hover 색상 삭제 샌드박스 이벤트일 경우 datepicker-header 제거

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -2887,8 +2887,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-success.active,
 .open > .dropdown-toggle.btn-success {
   color: #ffffff;
-  background-color: #db4756;
-  border-color: #db4756;
+  /*background-color: #db4756;
+  border-color: #db4756;*/
 }
 .btn-success:active,
 .btn-success.active,
