새만나요 무엇을 란에 레이블 두줄로 나오는 이슈 수정

--- a/public/css/mannayo.css
+++ b/public/css/mannayo.css
@@ -1381,7 +1381,7 @@ p{
   }
 
   .meetup_popup_option_label_creator_what{
-    width: 110px;
+    width: 145px;
   }
 
   .result_object_button_fake{
@@ -2049,7 +2049,7 @@ p{
 
   @media (max-width:420px) {
     .meetup_popup_option_label_creator_what{
-      width: 50px;
+      /*width: 50px;*/
     }
 
     .meetup_popup_container_wrapper{
