--- a/public/css/order/ticket.css
+++ b/public/css/order/ticket.css
@@ -382,6 +382,14 @@
   padding-top: 20px;
 }
 
+.order_user_info_container_account{
+  display: none;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 20px;
+}
+
 .ticketing-btn-payment{
   background-color: #43c9f0;
   border: 0;
@@ -420,6 +428,10 @@
   }
 
   .order_user_info_container{
+    width: 100%;
+  }
+
+  .order_user_info_container_account{
     width: 100%;
   }
 
