--- a/public/css/project/form_body_required.css
+++ b/public/css/project/form_body_required.css
@@ -524,10 +524,9 @@
 }
 
 .project_form_calcul_notice_check_text{
-  text-align: right;
   font-size: 14px;
-  font-weight: bold;
-  margin-top: 10px;
+  margin-top: 12px;
+  padding-top: 2px;
 }
 
 .order_form_conform_title{
