--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -507,6 +507,27 @@
   margin: auto;
 }
 
+.magazine-img-bg-blur{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform:translateX(-50%);
+  /*bottom: 0px;*/
+  bottom: 50%;
+  right: 0px;
+  margin: auto;
+  background-color: #37343A;
+  border-radius: 10px;
+
+  -webkit-filter:blur(5px);
+  -moz-filter:blur(5px);
+  -o-filter:blur(5px);
+  -ms-filter:blur(5px);
+  filter:blur(5px);
+}
+
 .magazine_thumb_content_container{
   width: 50%;
   padding-left: 32px;
