--- a/src/res/css/MyContentsPage.scss
+++ b/src/res/css/MyContentsPage.scss
@@ -3,6 +3,7 @@
   width: 100%;
   padding-top: 64px;
   padding-bottom: 64px;
+
   .container_box {
     margin-top: 20px;
     padding: 32px;
@@ -21,5 +22,23 @@
   }
   @media (max-width: 520px){
     /*모바일일때*/  
+    .myContentsTitle{
+      font-size: 24px;
+      margin-bottom: 23px;
+    }
+
+    .container_box {
+      padding: 20px;
+    }
+  }
+}
+
+@media (max-width: 520px){
+  /*모바일일때*/  
+  .MyContentsPage {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
