--- a/src/res/css/StoreDetailPage.scss
+++ b/src/res/css/StoreDetailPage.scss
@@ -97,7 +97,17 @@ $bgImageHeightMax: 280px;
       font-size: 14px;
       opacity: 0.7;
       color: #ffffff;
-      margin-top: 10px;
+      margin-top: 4px;
+    }
+
+    .user_img_container{
+      padding-left: 20px;
+      padding-right: 20px; 
+    }
+
+    .contentsContainer{
+      margin-top: -50px;
+      position: relative;
     }
 
   }
