--- a/src/res/css/StoreDetailReceipt.scss
+++ b/src/res/css/StoreDetailReceipt.scss
@@ -111,10 +111,32 @@
   }
 
   .policy_content {
-
+    line-height: 1.8;
   }
 
   @media (max-width: 520px){
     /*모바일일때*/  
+    .page_title {
+      font-size: 24px;
+    }
+
+    .page_sub_title {
+      margin-top: 20px;
+      font-size: 18px;
+    }
+    
+    .container_box {
+      padding: 20px;
+    }
+  }
+}
+
+@media (max-width: 520px){
+  /*모바일일때*/  
+  .StoreDetailReceipt {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
