관리자 버튼 안보이는 이슈 수정

--- a/src/res/css/StoreDetailPage.scss
+++ b/src/res/css/StoreDetailPage.scss
@@ -73,10 +73,10 @@ $bgImageHeightMax: 280px;
   }
   
   .admin_button {
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 9999;
+    // position: absolute;
+    // top: 0;
+    // right: 0;
+    // z-index: 9999;
     display: flex;
     justify-content: center;
     align-items: center;
