--- a/src/res/css/StoreReceiptItem.scss
+++ b/src/res/css/StoreReceiptItem.scss
@@ -176,6 +176,10 @@
     color: #7f7f7f;
   }
 
+  .order_user_name {
+    margin-bottom: 5px;
+  }
+
   @media (max-width: 520px){
     /*모바일일때*/  
   }
