--- a/src/res/css/StoreReceiptItem.scss
+++ b/src/res/css/StoreReceiptItem.scss
@@ -178,6 +178,8 @@
 
   .order_user_name {
     margin-bottom: 5px;
+    font-weight: bold;
+    color: #7f7f7f;
   }
 
   @media (max-width: 520px){
