버그 수정 및 기타 요청사항 2. 상점 연락처 / 이메일 -> 정산 탭으로 완료  -> 예금주랑 은행 사이
3. 상점 연락처 -> 비상 연락처
     상점 이메일 -> 연락용 이메일
     (워딩변경)

완료
4. 콘텐츠 설명란 글자수 제한 X

-> 255 제안 없음
-> height 5배 정도 넓히기
완료
5. 판매 내역에 결제 실패된 건들이 표시 됨
  -> 수정됨

6. 상점 관리 탭 순서 (1) 요청된 콘텐츠 (2) 상점 정보 (3) 상품관리 (4) 판매내역 (5) 정산
-> 상단 탭 순서
완료
7. 판매내역 워딩 수정 [총 컨텐츠 구매 -> 총 콘텐츠 구매]
완료
8. 요청된 콘텐츠 탭 버튼 디자인 교정 (모바일만 문제있음)
	->하단 정렬됨. (캡쳐본 올라옴) 확인필요 수정은함.
9. 상단  000 상점 관리 텍스트 옆에 [상점 가기] 버튼 추가
 -> 상점관리 타이틀 옆에 “상점가기” 버튼 추가
10. 요청된 콘텐츠가 없어요! 추가
-> 아이콘 추가

완료

--- a/src/res/css/StoreReceiptItem.scss
+++ b/src/res/css/StoreReceiptItem.scss
@@ -48,6 +48,8 @@
 
   .state_button_container {
     display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .state_button_refund {
@@ -137,6 +139,7 @@
     margin-left: 12px;
     font-size: 14px;
     color: #4d4d4d;
+    text-align: left;
   }
 
   .refund_etc_textarea{
