--- a/src/res/css/StoreAddItemPage.scss
+++ b/src/res/css/StoreAddItemPage.scss
@@ -44,7 +44,17 @@ $img_width: 100px;
 
   .input_content_textarea {
     width: 100%;
-    height: 72px;
+    height: 400px;
+    padding: 16px;
+    border-radius: 5px;
+    border: solid 1px #e6e6e6;
+    margin-top: 6px;
+    font-size: 14px;
+  }
+
+  .input_content_ask_textarea {
+    width: 100%;
+    height: 200px;
     padding: 16px;
     border-radius: 5px;
     border: solid 1px #e6e6e6;
