--- a/src/res/css/StoreManager.scss
+++ b/src/res/css/StoreManager.scss
@@ -51,6 +51,20 @@
     justify-content: center;
     align-items: center;
   }
+
+  .show_button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70px;
+    height: 25px;
+    border-radius: 12px;
+    background-color: #00bfff;
+    font-size: 10px;
+    font-weight: 500;
+    color: #ffffff;
+    margin-left: 10px;
+  }
   @media (max-width: 520px){
     /*모바일일때*/  
     .topContainer{
