--- a/src/res/css/StoreManagerTabAskOrderListPage.scss
+++ b/src/res/css/StoreManagerTabAskOrderListPage.scss
@@ -10,6 +10,24 @@
     box-shadow: 6px 4px 30px 0 rgba(25, 25, 25, 0.1);
   }
 
+  .hamImg_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .hamImg {
+    width: 100px;
+    // height: 100px;
+  }
+
+  .no_contents_text {
+    font-size: 16px;
+    color: black;
+    opacity: 0.5;
+    margin-top: 24px;
+  }
+
   @media (max-width: 520px){
     /*모바일일때*/  
     .container_box{
