반려 확인 버튼 텍스트 하단으로 나오는 이슈 수정

--- a/src/res/css/StoreReceiptItem.scss
+++ b/src/res/css/StoreReceiptItem.scss
@@ -54,7 +54,7 @@
 
   .state_button_refund {
     display: flex;
-    padding: 16px;
+    // padding: 16px;
     justify-content: center;
     align-items: center;
     font-size: 12px;
@@ -68,7 +68,7 @@
 
   .state_button_ok {
     display: flex;
-    padding: 16px;
+    // padding: 16px;
     justify-content: center;
     align-items: center;
     font-size: 12px;
