--- a/src/res/css/StoreAddItemPage.scss
+++ b/src/res/css/StoreAddItemPage.scss
@@ -108,6 +108,21 @@ $img_width: 100px;
     opacity: 0;
   }
 
+  .button_container {
+    display: flex;
+    margin-top: 24px;
+  }
+
+  .button_back {
+    width: 100%;
+    height: 56px;
+    border-radius: 12px;
+    border: solid 1px rgba(0, 0, 0, 0.1);
+    font-size: 18px;
+    color: #191919;
+    margin-right: 10px;
+  }
+
   .button_ok {
     width: 100%;
     height: 56px;
@@ -116,7 +131,6 @@ $img_width: 100px;
     font-size: 18px;
     font-weight: 500;
     color: #ffffff;
-    margin-top: 24px;
   }
 
   .camera_circle {
