--- a/src/res/css/StoreItemDetailPage.scss
+++ b/src/res/css/StoreItemDetailPage.scss
@@ -1,12 +1,43 @@
 $img_width: 520px;
 .StoreItemDetailPage {
   // display: flex;
-  
+  padding-top: 64px;
+  padding-bottom: 64px;
+
+  .item_img_container {
+    position: relative;
+  }
+
+  .user_info_container {
+    position: absolute;
+    bottom: 0px;
+    display: flex;
+    justify-content: space-between;
+    // align-items: center;
+    width: 100%;
+    padding: 30px;
+  }
+
+  .user_img {
+    width: 55px;
+    height: 55px;
+    border-radius: 50px;
+  }
+
   .item_img {
     width: $img_width;
     height: $img_width;
     border-radius: 20px;
-    margin-top: 64px;
+    // margin-top: 64px;
+  }
+
+  .item_img_cover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 68%, rgba(0, 0, 0, 0.5));
   }
 
   .content_container {
@@ -17,7 +48,7 @@ $img_width: 520px;
     padding-left: 27px;
     padding-right: 27px;
     margin-top: 20px;
-    margin-bottom: 64px;
+    // margin-bottom: 64px;
   }
 
   .content_title {
@@ -53,8 +84,30 @@ $img_width: 520px;
     color: #ffffff;
   }
 
+  .store_contents_container {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+  }
+
+  .store_contents_title {
+    font-size: 29px;
+    color: #ffffff;
+    font-weight: bold;
+  }
+
+  .store_contents_content {
+    font-size: 17px;
+    color: #ffffff;
+    opacity: 0.7;
+  }
+  
+
   @media (max-width: 520px){
     /*모바일일때*/
+    padding-top: 0px;
+    padding-bottom: 0px;
+    
     .content_title{
       font-size: 18px;
       margin-bottom: 2px;
@@ -80,11 +133,28 @@ $img_width: 520px;
     .content_container{
       border-radius: 0px;
       margin-top: 0px;
-      margin-bottom: 0px;
+      // margin-bottom: 0px;
       padding-left: 10px;
       padding-right: 10px;
       padding-top: 20px;
       padding-bottom: 11px;
+    }
+
+    .user_img {
+      width: 24px;
+      height: 24px;
+    }
+
+    .store_contents_container{
+      margin-left: 10px;
+    }
+
+    .store_contents_title {
+      font-size: 17px;
+    }
+  
+    .store_contents_content {
+      font-size: 10px;
     }
   }
 }
